--- a/secao.css
+++ b/secao.css
@@ -10,7 +10,7 @@ body{
 	background-color: #f5f5f5;
 	color:#999;
 }
-header, nav, section, article, footer {
+header, nav, section, article, footer, aside {
 	display:block;
 }
 
@@ -22,7 +22,7 @@ header h1 {
 
 article {
 	clear:both;
-	margin-top:50px;
+	margin-top:10px;
 	text-align: justify;
 }
 
@@ -67,6 +67,79 @@ section#intro{
 	margin-top:60px;
 	padding-left: 10px;
 }
+
+section#intro p{
+	padding-top: 35px;
+	font-style: italic;
+	font-size: 14px;
+	width: 800px;
+	color:#34A8E0;
+}
+
+article header h1{
+	font-size: 22px;
+	text-align: left;
+	line-height: 40px;
+	margin-top: 20px;
+	padding: 0;
+}
+
+article p{
+	margin-bottom: 10px;
+	padding-right: 10px;
+	width: 620px;
+}
+
+article header p{
+	font-size: 15px;
+	line-height: 30px;
+	font-style: italic;
+	margin-bottom: 0px;
+}
+
+article{
+	width: 620px;
+	float: left;	
+}
+
+aside{
+	width: 280px;
+	float: right;
+	padding-left: 40px;
+}
+
+aside section{
+	margin-top:35px;
+}
+
+aside section h1 {
+	margin-bottom: 15px;
+	font-size: 16px;
+}
+
+aside ul{ /* tirar marcadores */
+
+}
+
+aside ul li{
+	margin-left: 20px;
+}
+
+aside ul li a{
+	color:;
+			/* tirar sublinhado */
+}
+
+aside ul li a:hover{ /* colocar sublinhados*/
+
+}
+
+
+
+
+
+
+
 
 
 
